@@ -1,4 +1,8 @@
-﻿drkns 27.11.2013 22:00:17 +0200 - build 3727
+﻿zg 29.11.2013 21:29:21 +0200 - build 3728
+
+1. fg4bit и bg4bit при импорте экспорте были перепутаны местами.
+
+drkns 27.11.2013 22:00:17 +0200 - build 3727
 
 1. 0002533: не работает считывание настроек Xlat при старте Far
 
